<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">course</string>
  	<string name="main_tab_bottom_timetable">课表</string>
    <string name="main_tab_bottom_myinfo">我的</string>
    <string name="main_tab_bottom_notebook">笔记</string>
    <string name="main_tab_bottom_message">消息</string>
    <string name="action_settings">Settings</string>
    
    <string name="course_name_string">课程名 </string>
    <string name="category_string"> 类别 </string>
    <string name="start_week"> 起始周 </string>
    <string name="stop_week"> 结束周 </string>
    <string name="total_number"> 总次数 </string>
    <string name="every_week_number"> 每周次数 </string>
    <string name="course_cost"> 课程花费 </string>
    <string name="where_course"> 上课地点 </string>
    <string name="annotation"> 注释 </string>
    <string name="remind"> 课前提醒 </string>
    <string name="sure"> 确定 </string>
    <string name="cancel"> 取消 </string>
    <string name="classnumber"> 课次 </string>
    <string name="weeknumber"> 周次 </string>
    <string name="time"> 时间 </string>
    <string name="basicInfo"> 基本信息 </string>
    <string name="courseTime"> 上课时间 </string>
    <string name="courseLocation"> 上课地点 </string>
    <string name="others"> 其他 </string>
    <string name="deleteCurrentCour"> 删除本次课程 </string>
    <string name="deleteCour"> 删除课程 </string>
    <string name="editclassthistime"> 编辑本节课程 </string>
    <string name="editclass"> 编辑本门课程 </string>
    <string name="addclass"> 添加课程 </string>
    <string name="localandcost"> 地点及费用 </string>
    <string name="finishok"> 完成 </string>
    <string name="cheatclass"> 查看课程 </string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="class_statistics">课程统计</string>
    <string name="bill_statistics">账单统计</string>
    <string name="about_software">关于软件</string>
    <string name="my_identification">我的信息</string>
    <string name="my_icon">我的头像</string>
    <string name="children_icon">孩子头像</string>
    <string name="log_out">退出登录</string>
    <string name="phone_number">电话号</string>
    <string name="gender">性别</string>
    <string name="region">地区</string>
    <string name="childmessage">孩子信息</string>
    
    <string name="input_location">请输入地点</string>
</resources>
