<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/topbar_common" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/whitebackground"
        android:fillViewport="true" >

        <LinearLayout
            android:id="@+id/add_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/basicInfo"
                android:textColor="#0195ff"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:background="#0195ff"
                android:orientation="horizontal" >
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/course_name_string"
                    android:textColor="#555"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/coursename_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="105dp"
                    android:background="@null"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="请输入"
                    android:maxLength="20"
                    android:textColor="#555"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/category_string"
                    android:textColor="#555"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/class_type_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="105dp"
                    android:textColor="#555"
                    android:textSize="16sp" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/courseTime"
                android:textColor="#0195ff"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:background="#0195ff"
                android:orientation="horizontal" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/every_week_number"
                        android:textColor="#555"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/every_week_number_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="105dp"
                        android:entries="@array/every_week_number"
                        android:gravity="center" />
                </RelativeLayout>

                <ListView
                    android:id="@+id/every_week_number_listview"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="105dp"
                    android:layout_marginTop="5dp"
                    android:divider="#00ffffff"
                    android:textColor="#555" >
                </ListView>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="上课日期"
                android:textColor="#0195ff"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:background="#0195ff"
                android:orientation="horizontal" >
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/start_week"
                    android:textColor="#555"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/startweek_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="105dp"
                    android:singleLine="true"
                    android:textColor="#555"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/total_number"
                    android:textColor="#555"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/total_number_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="105dp"
                    android:background="@null"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:hint="请输入（不知道？也可选择结束周哟）"
                    android:numeric="integer"
                    android:textColor="#555"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/stop_week"
                    android:textColor="#555"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/stopweek_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="105dp"
                    android:singleLine="true"
                    android:textColor="#555"
                    android:textSize="16sp" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/localandcost"
                android:textColor="#0195ff"
                android:textSize="15sp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:background="#0195ff"
                android:orientation="horizontal"
                android:visibility="gone" >
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/course_cost"
                    android:textColor="#555"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/course_cost_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="105dp"
                    android:background="@null"
                    android:focusableInTouchMode="true"
                    android:hint="请输入"
                    android:numeric="integer"
                    android:textColor="#555"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="45dp"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/where_course"
                    android:textColor="#555"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/image_location"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="105dp"
                    android:src="@drawable/location_gps_image" />

                <TextView
                    android:id="@+id/where_conrse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_toRightOf="@+id/image_location"
                    android:text="@string/input_location"
                    android:textColor="#555"
                    android:textSize="16sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>